hphp/test/zend/good/Zend/tests/bug47704.php.expectf

Fatal error: Operator not supported for strings in %s/bug47704.php on line 3
